--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>poke-cobbledex</title>
+    
+    <title>PokéDex - L'Encyclopédie Pokémon Ultime</title>
+    <meta name="description" content="Explorez le monde des Pokémon avec PokéDex. Stats, évolutions, formes, cris et localisations de plus de 1000 créatures." />
+    <meta name="keywords" content="Pokémon, Pokédex, Stats, Stratégie, Nintendo, Game Freak, PokéDex" />
+    <meta name="author" content="Toi" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ton-site.vercel.app/" />
+    <meta property="og:title" content="PokéDex - Base de données Pokémon" />
+    <meta property="og:description" content="Le Pokédex nouvelle génération : rapide, complet et magnifique." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/master-ball.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PokéDex" />
+    <meta name="twitter:description" content="Le Pokédex nouvelle génération." />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/master-ball.png" />
   </head>
   <body>
     <div id="root"></div>
